New ID copy code (rBrB9da7dfa1586d) Breaks node previews in compositor. #52314

Closed
opened 2017-08-09 08:56:11 +02:00 by Bastien Montagne · 7 comments

System Information
NA

Blender Version
Broken: 9da7dfa158
Worked: 2.79RC1

Short description of error

Since rBrB9da7dfa1586d (new ID copying code), previews are not rendered at all in compositing nodes.

**System Information** NA **Blender Version** Broken: 9da7dfa158 Worked: 2.79RC1 **Short description of error** Since rBrB9da7dfa1586d (new ID copying code), previews are not rendered at all in compositing nodes.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-08-09 08:56:24 +02:00
Bastien Montagne changed title from rBrB9da7dfa1586d Breaks node previews in compositor. to New ID copy code (rBrB9da7dfa1586d) Breaks node previews in compositor. 2017-08-09 09:04:06 +02:00
Author
Owner

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner
Author
Owner

Lots of investigations already, with very little results…

Ended up bisecting inside id_copy_rework branch, and breaking commit is a8e4aae091. Still do not understand why. :|

Lots of investigations already, with very little results… Ended up bisecting inside id_copy_rework branch, and breaking commit is a8e4aae091. Still do not understand why. :|
Author
Owner

(Obvious thinking is change to BKE_libblock_alloc(), of course, but… what?)

(Obvious thinking is change to `BKE_libblock_alloc()`, of course, but… what?)

This issue was referenced by a152743ba3

This issue was referenced by a152743ba31d8307efe70b6024fa81212b597362
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52314
No description provided.