Fix T52314: New ID copy code (rBrB9da7dfa1586d) Breaks node previews in compositor.

"Just" forgot to copy data block's name in 'NO_MAIN' case... *sigh*